src/tests/krate/publish/snapshots/all__krate__publish__keywords__bad_keywords-2.snap
---
source: src/tests/krate/publish/keywords.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid upload request: invalid value: string \"?@?%\", expected a valid keyword specifier at line 1 column 113"
    }
  ]
}
