src/tests/krate/publish/snapshots/all__krate__publish__keywords__bad_keywords.snap
---
source: src/tests/krate/publish/keywords.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid upload request: invalid length 29, expected a keyword with less than 20 characters at line 1 column 138"
    }
  ]
}
