src/tests/krate/publish/snapshots/all__krate__publish__keywords__too_many_keywords.snap
---
source: src/tests/krate/publish/keywords.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid upload request: invalid length 6, expected at most 5 keywords per crate at line 1 column 175"
    }
  ]
}
